# PlaceholderEngineWGPU

./: CMakeLists.txt  cert.pem  csr.pem  key.pem
PlaceholderEngineWGPU/: Application.cpp  Application.h  BaseComponent.h  BaseSystem.h  CMakeLists.txt  MeshRendererComponent.h  MeshRendererSystem.h  PlaceholderEngineWGPU.cpp  PlaceholderEngineWGPU.h  ResourceManager.cpp  ResourceManager.h  implementations.cpp  webgpu-utils.cpp  webgpu-utils.h
build-web/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-web/PlaceholderEngineWGPU/: PlaceholderEngineWGPU.html  PlaceholderEngineWGPU.js  PlaceholderEngineWGPU.wasm  cmake_install.cmake
build-web/glfw3webgpu/: cmake_install.cmake
build-web/glm/: cmake_install.cmake
build-web/imgui/: cmake_install.cmake
build-web/webgpu/: cmake_install.cmake
resources/: fourareen.mtl  test.gltf
